unpackaged/main/default/objects/Fact_Find__c/Fact_Find__c.object-meta.xml
<CustomObject>
    <label>Fact Find</label>
    <nameField>
        <label>Fact Find Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fact Finds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>