unpackaged/main/default/objects/Fact_Find__c/fields/FF_Household__c.field-meta.xml
<CustomField>
    <fullName>FF_Household__c</fullName>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on FF_Household on the Fact Find object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fact Finds</relationshipLabel>
    <relationshipName>Fact_Finds1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>