unpackaged/main/default/objects/Fact_Find__c/fields/FF_Primary_Client__c.field-meta.xml
<CustomField>
    <fullName>FF_Primary_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a Person Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fact Finds</relationshipLabel>
    <relationshipName>Fact_Finds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>