unpackaged/main/default/objects/Fact_Find__c/fields/FF_Questionnaire_link__c.field-meta.xml
<CustomField>
    <fullName>FF_Questionnaire_link__c</fullName>
    <label>Client Questionnaire link</label>
    <type>Url</type>
</CustomField>