unpackaged/main/default/objects/Fact_Find__c/fields/FF_Status__c.field-meta.xml
<CustomField>
    <fullName>FF_Status__c</fullName>
    <defaultValue>&quot;Not Sent&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fact_Find_Status</valueSetName>
    </valueSet>
</CustomField>