unpackaged/main/default/objects/Fact_Find__c/fields/FP_Last_client_action__c.field-meta.xml
<CustomField>
    <fullName>FP_Last_client_action__c</fullName>
    <inlineHelpText>The date the client/prospect last accessed the fact find</inlineHelpText>
    <label>Last client action</label>
    <type>Date</type>
</CustomField>