unpackaged/main/default/objects/Fact_Find__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fact Finds</relationshipLabel>
    <relationshipName>Fact_Finds</relationshipName>
    <type>Lookup</type>
</CustomField>