unpackaged/main/default/objects/Fact_Find__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fact_Finds</relationshipName>
    <type>Lookup</type>
</CustomField>