unpackaged/main/default/objects/Fact_Find__c/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <formula>FF_Primary_Client__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact First Name</label>
    <type>Text</type>
</CustomField>