unpackaged/main/default/objects/Fact_Find__c/fields/Primary_Contacts_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contacts_Email__c</fullName>
    <label>Primary Contacts Email</label>
    <type>Email</type>
</CustomField>