unpackaged/main/default/objects/Fact_Find__c/fields/Ready_to_send__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to send</label>
    <type>Checkbox</type>
</CustomField>