unpackaged/main/default/objects/Fact_Find__c/fields/Risk_questions_completed__c.field-meta.xml
<CustomField>
    <fullName>Risk_questions_completed__c</fullName>
    <inlineHelpText>Mark &quot;Yes&quot; if any of the clients have completed the RTQ.</inlineHelpText>
    <label>Risk questions completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>