unpackaged/main/default/objects/Fact_Find__c/recordTypes/Discovery.recordType-meta.xml
<RecordType>
    <fullName>Discovery</fullName>
    <active>true</active>
    <label>Discovery - Joint</label>
</RecordType>