unpackaged/main/default/objects/Fact_Find__c/recordTypes/Full.recordType-meta.xml
<RecordType>
    <fullName>Full</fullName>
    <active>true</active>
    <label>Full - Individual</label>
</RecordType>