unpackaged/main/default/objects/Fact_Find__c/recordTypes/Full_Joint.recordType-meta.xml
<RecordType>
    <fullName>Full_Joint</fullName>
    <active>true</active>
    <label>Full - Joint</label>
</RecordType>