unpackaged/main/default/objects/Fact_Find__c/validationRules/This_is_a_Profile_client.validationRule-meta.xml
<ValidationRule>
    <fullName>This_is_a_Profile_client</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( FF_Household__r.Fact_Find_Type__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>This client is on the new Profile process you cannot create a Fact Find</errorMessage>
</ValidationRule>