unpackaged/main/default/objects/Fact_Find__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FP_Last_client_action__c</columns>
    <columns>Opportunity__c</columns>
    <columns>FF_Status__c</columns>
    <columns>FF_Household__c</columns>
    <columns>Primary_Contact_First_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>