unpackaged/main/default/objects/Fact_Find__c/listViews/Fact_find_default.listView-meta.xml
<ListView>
    <fullName>Fact_find_default</fullName>
    <columns>NAME</columns>
    <columns>FF_Primary_Client__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>FF_Status__c</columns>
    <columns>PreciseFP_Profile__c</columns>
    <columns>FF_Questionnaire_link__c</columns>
    <columns>FF_Household__c</columns>
    <filterScope>Everything</filterScope>
    <label>Fact find default list</label>
</ListView>